# flask-smorest-example-bookmanager

./: .env.example  .flaskenv  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
book_manager/: __init__.py  default_settings.py
book_manager/extensions/: __init__.py
book_manager/extensions/JWT/: __init__.py
book_manager/extensions/api/: __init__.py
book_manager/extensions/csrf/: __init__.py
book_manager/extensions/database/: __init__.py
book_manager/models/: __init__.py  authors.py  books.py  schema.py
book_manager/views/: __init__.py
book_manager/views/auth/: resources.py
book_manager/views/authors/: resources.py
book_manager/views/books/: resources.py
tests/: conftest.py  pytest.ini  test_api.py
